# ChangeLog for virtual/rubygems
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/rubygems/ChangeLog,v 1.25 2011/10/21 06:02:48 graaff Exp $

  21 Oct 2011; Hans de Graaff <graaff@gentoo.org> rubygems-2.ebuild,
  rubygems-3.ebuild:
  $1

*rubygems-4 (20 Oct 2011)
*rubygems-3 (20 Oct 2011)
*rubygems-2 (20 Oct 2011)
*rubygems-1 (20 Oct 2011)

  20 Oct 2011; Hans de Graaff <graaff@gentoo.org> +rubygems-1.ebuild,
  +rubygems-2.ebuild, +rubygems-3.ebuild, +rubygems-4.ebuild, +metadata.xml:
  Add back virtual/rubygems since we cannot support unbundled rubygems for all
  ruby targets.
