@@ -5,12 +5,13 @@ EBUILD rubygems-1.ebuild 1435 RMD160 c401101ccd7c363303381aaa94571f8308f38297 SH
 EBUILD rubygems-2.ebuild 1242 RMD160 b98b01a1f13270529968390c975eca8be7471ba1 SHA1 11a27c2fa66345287ee8e8bea7438cd8714c103f SHA256 0c1d57e373c42e9a0199598d35258ef925fe6561c64bfce1cce3fb31d5139926
 EBUILD rubygems-3.ebuild 1242 RMD160 5cd68c08c754a928bdb4b9f4691edff445fa47b7 SHA1 b8a310b00fa98bd9d9f6538da5318459bf3cda7f SHA256 a6d47f569846ed90e2909d53ab3f1ec4c73f073aef41ddf5ee8daf61a23b19a8
 EBUILD rubygems-4.ebuild 1268 RMD160 40f07bddbaa727970d8f67f60e10a84c142f69f1 SHA1 08b47d3040abdd1a018551549fc2515005f732a4 SHA256 43b43a22dab8fc21f2d60857fd2cdeb00c3ad353b84d6ed82af1c8d2a91430bf
-MISC ChangeLog 650 RMD160 a87984af3d0bb4440e2c8ae52a97eaeab375064f SHA1 3b8b59d1a0ea4ccfea8165e7af8c7578d8fda8bf SHA256 da0b590f29ae0eb5b4c0cf5fa555ba918f3560128e331519e1545f07b31e4973
+EBUILD rubygems-5.ebuild 1217 RMD160 e13b8261d5b6418c0bde6f611677607bb28fe75f SHA1 4878d880bf99eff804d30ff597fba06c826aab7c SHA256 272badfcf18002df513ad9894b775b2138c75efda973c20bb79d2ad48031e631
+MISC ChangeLog 789 RMD160 45bb406bc99be9b1f37e5cd9b5ba9d8310b3a110 SHA1 63f8f9f3c73f75c2997a6ac2a4125fde7fe345fe SHA256 bc14bc2237475a4e5d8e8ac6902838df90f51eeb6b586b5aef48abdff511479f
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk6hCxMACgkQiIP6VqMIqNe35QEAkaDYEN8fReWagv4saT8S9tpF
-ajstGou3zyYPcVzQRqkA/3foHrgyDefu7zgETEmN5pSQvJV/ejZ+cJQNYLvgB6I1
-=fqKp
+iF4EAREIAAYFAk6hGcsACgkQiIP6VqMIqNf/rgD/U90zqKBBX0TeQAt+/KkC3W9f
+3XW7WsHMfLG/vWTWyVIA/0vXplidOzhMo4VRFG/4G6lX7+itcytW5E5C7oPWF2z7
+=i/HP
 -----END PGP SIGNATURE-----
