@@ -1,6 +1,11 @@
 # ChangeLog for virtual/rubygems
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/rubygems/ChangeLog,v 1.25 2011/10/21 06:02:48 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/rubygems/ChangeLog,v 1.26 2011/10/21 07:05:42 graaff Exp $
+
+*rubygems-5 (21 Oct 2011)
+
+  21 Oct 2011; Hans de Graaff <graaff@gentoo.org> +rubygems-5.ebuild:
+  Add a virtual definition for Rubinius.
 
   21 Oct 2011; Hans de Graaff <graaff@gentoo.org> rubygems-2.ebuild,
   rubygems-3.ebuild:
